--- a/primecolada-frontend/Dockerfile
+++ b/primecolada-frontend/Dockerfile
@@ -8,7 +8,16 @@ RUN npm run build
 
 # Stage 2: Serve the application with Nginx
 FROM nginx:stable-alpine
+
+# Install gettext for envsubst
+RUN apk add --no-cache gettext
+
 COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Create a directory for the template and copy the template file
+RUN mkdir -p /etc/nginx/templates
+COPY nginx.conf /etc/nginx/templates/default.conf.template
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
+
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["/start.sh"]
