--- a/primecolada-frontend/nginx.template.conf
+++ b/primecolada-frontend/nginx.template.conf
@@ -1,5 +1,5 @@
 server {
-  listen ${PORT};
+  listen 80;
   server_name localhost;
 
   location / {
@@ -8,16 +8,16 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
-  location /api/ {
-    proxy_pass http://${BACKEND_HOST}:${BACKEND_PORT}/;
+  location /api {
+    proxy_pass http://backend:5000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  location /ws {
-    proxy_pass http://${WEBSOCKET_HOST}:${WEBSOCKET_PORT};
+  location /socket.io {
+    proxy_pass http://backend:5000/socket.io;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
