Update Cloud Build configuration to reference the correct Cloud Run service file and add initial Cloud Run service definition

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,7 +16,7 @@ steps:
       - 'run'
       - 'services'
       - 'replace'
-      - 'cloudrun.yaml'
+  - 'cloudrun-service.yaml'
       - '--region'
       - 'us-central1'
       - '--project'
