Update Cloud Run service region to europe-southwest1 in build configuration

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
       - 'replace'
       - 'cloudrun-service.yaml'
       - '--region'
-      - 'us-central1'
+      - 'europe-southwest1'
       - '--project'
       - '$PROJECT_ID'
 images:
