Move ingress annotation to metadata section in Cloud Run service configuration

--- a/cloudrun-service.yaml
+++ b/cloudrun-service.yaml
@@ -2,11 +2,12 @@ apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
   name: tpv-primecolada
+  annotations:
+    run.googleapis.com/ingress: all
 spec:
   template:
     metadata:
       annotations:
-        run.googleapis.com/ingress: all
         run.googleapis.com/launch-stage: GA
         run.googleapis.com/allow-unauthenticated: "true"
     spec:
