--- a/primecolada-frontend/nginx.conf
+++ b/primecolada-frontend/nginx.conf
@@ -16,14 +16,14 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  location /ws {
-    proxy_pass http://${WEBSOCKET_HOST}:${WEBSOCKET_PORT};
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
+  # location /ws {
+  #   proxy_pass http://${WEBSOCKET_HOST}:${WEBSOCKET_PORT};
+  #   proxy_http_version 1.1;
+  #   proxy_set_header Upgrade $http_upgrade;
+  #   proxy_set_header Connection "upgrade";
+  #   proxy_set_header Host $host;
+  #   proxy_set_header X-Real-IP $remote_addr;
+  #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  #   proxy_set_header X-Forwarded-Proto $scheme;
+  # }
 }
