--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,6 +15,14 @@ steps:
     args:
       - 'run'
       - 'services'
+      - 'replace'
+      - 'cloudrun.yaml'
+      - '--region'
+      - 'europe-southwest1'
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'run'
+      - 'services'
       - 'add-iam-policy-binding'
       - 'tpv-primecolada'
       - '--region'
