--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,11 +14,27 @@ steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
-      - 'services'
-      - 'replace'
-      - 'cloudrun.yaml'
+      - 'deploy'
+      - 'tpv-primecolada'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/primecolada-frontend'
       - '--region'
       - 'europe-southwest1'
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'
+      - '--update-env-vars'
+      - 'BACKEND_HOST=localhost,BACKEND_PORT=5000'
+      - '--container'
+      - 'backend'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/primecolada-backend'
+      - '--no-ports'
+      - '--container'
+      - 'websockets'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/primecolada-websockets'
+      - '--no-ports'
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
