--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,11 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/primecolada-frontend']
   - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - 'gcloud run services delete tpv-primecolada --region europe-southwest1 --platform managed --quiet || exit 0'
+  - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
       - 'deploy'
