--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,6 +20,16 @@ steps:
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'run'
+      - 'services'
+      - 'add-iam-policy-binding'
+      - 'tpv-primecolada'
+      - '--region'
+      - 'europe-southwest1'
+      - '--member=allUsers'
+      - '--role=roles/run.invoker'
 images:
   - 'gcr.io/$PROJECT_ID/primecolada-frontend'
 
