--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,11 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '--no-cache', '-t', 'gcr.io/$PROJECT_ID/primecolada-frontend', './primecolada-frontend']
   - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '--no-cache', '-t', 'gcr.io/$PROJECT_ID/primecolada-backend', './primecolada-backend']
+  - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/primecolada-frontend']
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/primecolada-backend']
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
@@ -20,6 +24,10 @@ steps:
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+      - '--container'
+      - 'backend'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/primecolada-backend'
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
@@ -32,6 +40,7 @@ steps:
       - '--role=roles/run.invoker'
 images:
   - 'gcr.io/$PROJECT_ID/primecolada-frontend'
+  - 'gcr.io/$PROJECT_ID/primecolada-backend'
 
 options:
   logging: CLOUD_LOGGING_ONLY
