Using appropiate beta syntax for sidecars

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,13 +14,12 @@ steps:
       - 'gcloud run services delete tpv-primecolada --region europe-southwest1 --platform managed --quiet || exit 0'
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
+      - 'beta'
       - 'run'
       - 'deploy'
       - 'tpv-primecolada'
       - '--image'
       - 'gcr.io/$PROJECT_ID/primecolada-frontend'
-      - '--container'
-      - 'backend'
       - '--image'
       - 'gcr.io/$PROJECT_ID/primecolada-backend'
       - '--region'
