--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,47 +1,60 @@
 steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '--no-cache', '-t', 'gcr.io/$PROJECT_ID/primecolada-frontend', './primecolada-frontend']
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '--no-cache', '-t', 'gcr.io/$PROJECT_ID/primecolada-backend', './primecolada-backend']
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/primecolada-frontend']
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/primecolada-backend']
-  - name: 'gcr.io/cloud-builders/gcloud'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - 'gcloud run services delete tpv-primecolada --region europe-southwest1 --platform managed --quiet || exit 0'
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-      - 'beta'
-      - 'run'
-      - 'deploy'
-      - 'tpv-primecolada'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/primecolada-frontend'
-      - '--update-env-vars'
-      - 'BACKEND_HOST=localhost,BACKEND_PORT=8080'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/primecolada-backend'
-      - '--region'
-      - 'europe-southwest1'
-      - '--platform'
-      - 'managed'
-      - '--allow-unauthenticated'
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-      - 'run'
-      - 'services'
-      - 'add-iam-policy-binding'
-      - 'tpv-primecolada'
-      - '--region'
-      - 'europe-southwest1'
-      - '--member=allUsers'
-      - '--role=roles/run.invoker'
-images:
-  - 'gcr.io/$PROJECT_ID/primecolada-frontend'
-  - 'gcr.io/$PROJECT_ID/primecolada-backend'
+# Build and push frontend image
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/primecolada-frontend', './primecolada-frontend']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'gcr.io/$PROJECT_ID/primecolada-frontend']
 
-options:
-  logging: CLOUD_LOGGING_ONLY
+# Build and push backend image
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/primecolada-backend', './primecolada-backend']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'gcr.io/$PROJECT_ID/primecolada-backend']
+
+# Deploy frontend service
+- name: 'gcr.io/google-appengine/exec-wrapper'
+  args:
+  - '-i'
+  - 'gcr.io/$PROJECT_ID/primecolada-frontend'
+  - '-s'
+  - 'primecolada-frontend'
+  - '-v'
+  - 'gcr.io/$PROJECT_ID/primecolada-frontend:latest'
+  - '--'
+  - 'gcloud'
+  - 'run'
+  - 'deploy'
+  - 'primecolada-frontend'
+  - '--image'
+  - 'gcr.io/$PROJECT_ID/primecolada-frontend'
+  - '--region'
+  - 'europe-west1'
+  - '--platform'
+  - 'managed'
+  - '--allow-unauthenticated'
+
+# Deploy backend service
+- name: 'gcr.io/google-appengine/exec-wrapper'
+  args:
+  - '-i'
+  - 'gcr.io/$PROJECT_ID/primecolada-backend'
+  - '-s'
+  - 'primecolada-backend'
+  - '-v'
+  - 'gcr.io/$PROJECT_ID/primecolada-backend:latest'
+  - '--'
+  - 'gcloud'
+  - 'run'
+  - 'deploy'
+  - 'primecolada-backend'
+  - '--image'
+  - 'gcr.io/$PROJECT_ID/primecolada-backend'
+  - '--region'
+  - 'europe-west1'
+  - '--platform'
+  - 'managed'
+  - '--allow-unauthenticated'
+
+images:
+- gcr.io/$PROJECT_ID/primecolada-frontend
+- gcr.io/$PROJECT_ID/primecolada-backend
