--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,6 +31,8 @@ steps:
   - 'europe-west1'
   - '--platform'
   - 'managed'
+  - '--set-env-vars'
+  - 'BACKEND_URL=https://primecolada-backend-image-j5t2g6x54a-ew.a.run.app'
   - '--allow-unauthenticated'
 
 # Deploy backend service
