--- a/primecolada-backend/Dockerfile
+++ b/primecolada-backend/Dockerfile
@@ -18,4 +18,4 @@ ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
 # Run app.py when the container launches
-CMD ["gunicorn", "--workers", "4", "--bind", "0.0.0.0:$PORT", "app:app"]
+CMD exec gunicorn --workers 4 --bind "0.0.0.0:$PORT" app:app
