Simplifying frontend architecture

--- a/primecolada-frontend/Dockerfile
+++ b/primecolada-frontend/Dockerfile
@@ -6,18 +6,10 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2: Serve the application with Nginx
-FROM nginx:stable-alpine
-
-# Install gettext for envsubst
-RUN apk add --no-cache gettext
-
-COPY --from=build /app/dist /usr/share/nginx/html
-# Create a directory for the template and copy the template file
-RUN mkdir -p /etc/nginx/templates
-COPY nginx.conf /etc/nginx/templates/default.conf.template
-COPY start.sh /start.sh
-RUN chmod +x /start.sh
-
+# Stage 2: Serve the application
+FROM node:18-alpine
+WORKDIR /app
+COPY --from=build /app/dist /app
+RUN npm install -g serve
 EXPOSE 80
-CMD ["/start.sh"]
+CMD ["serve", "-s", ".", "-l", "80"]
