--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,18 @@ services:
       - "5000:5000"
     volumes:
       - ./primecolada-backend:/app
+    env_file:
+      - ./primecolada-backend/.env.backend
     environment:
-      - FLASK_ENV=development
+      - PORT=5000
   frontend:
     build: 
       context: ./primecolada-frontend
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - "8080:8080"
+    environment:
+      - VITE_API_BASE_URL=http://localhost:5000
+      - PORT=8080
     depends_on:
       - backend
