First steps towars rework.

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ lerna-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+/primecolada-backend/.env.backend
+/primecolada-frontend/.env.frontend
+/primecolada-backend/firebase_credentials.json
+
 
 # Docker
 docker-compose.override.yml
