--- a/primecolada-frontend/package.json
+++ b/primecolada-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "firebase": "^12.8.0",
     "jwt-decode": "^3.1.2",
     "qrcode": "^1.5.3",
     "socket.io-client": "^4.7.5",
@@ -17,7 +18,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^4.4.5"
+    "@vitejs/plugin-vue": "^6.0.3",
+    "vite": "^7.3.1"
   }
 }
