--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    env_file:
+      - ./primecolada-frontend/.env.development
     environment:
-      - VITE_API_BASE_URL=http://localhost:5000
       - PORT=8080
     depends_on:
       - backend
