--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,25 +7,29 @@ substitutions:
 steps:
 # Build and push frontend image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/primecolada-frontend', './primecolada-frontend']
+  id: 'build-frontend-image'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/primecolada-frontend:$SHORT_SHA', './primecolada-frontend']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/primecolada-frontend']
+  id: 'push-frontend-image'
+  args: ['push', 'gcr.io/$PROJECT_ID/primecolada-frontend:$SHORT_SHA']
 
 # Build and push backend image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/primecolada-backend', './primecolada-backend']
+  id: 'build-backend-image'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/primecolada-backend:$SHORT_SHA', './primecolada-backend']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/primecolada-backend']
   id: 'push-backend-image'
 
 # Deploy frontend service
 - name: 'gcr.io/cloud-builders/gcloud'
+  id: 'deploy-frontend'
   args:
   - 'run'
   - 'deploy'
   - 'primecolada-frontend'
   - '--image'
-  - 'gcr.io/$PROJECT_ID/primecolada-frontend'
+  - 'gcr.io/$PROJECT_ID/primecolada-frontend:$SHORT_SHA'
   - '--region'
   - '${_REGION}'
   - '--platform'
