--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
   id: 'build-backend-image'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/primecolada-backend:$SHORT_SHA', './primecolada-backend']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/primecolada-backend']
+  args: ['push', 'gcr.io/$PROJECT_ID/primecolada-backend:$SHORT_SHA']
   id: 'push-backend-image'
 
 # Deploy frontend service
