--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,12 +3,13 @@ options:
 
 substitutions:
   _REGION: "europe-west1"
+  _BACKEND_URL: "https://primecolada-backend-15318690559.europe-west1.run.app"
 
 steps:
 # Build and push frontend image
 - name: 'gcr.io/cloud-builders/docker'
   id: 'build-frontend-image'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/primecolada-frontend:$SHORT_SHA', './primecolada-frontend']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/primecolada-frontend:$SHORT_SHA', '--build-arg', 'VITE_API_BASE_URL=${_BACKEND_URL}', './primecolada-frontend']
 - name: 'gcr.io/cloud-builders/docker'
   id: 'push-frontend-image'
   args: ['push', 'gcr.io/$PROJECT_ID/primecolada-frontend:$SHORT_SHA']
